# OstenEngine

./: .clangd  .gitignore  CMakeLists.txt  OstenEngine  README.md  codebook.toml  compile.bat  compile_commands.json  imgui.ini  linux_builder.sh  main.cpp
Obsidian/: FileStructure.md
Obsidian/.obsidian/: workspace.json
Obsidian/src/: Unix App.md  Win32 App.md
Obsidian/src/Engine/: Transform.md
Obsidian/src/Engine/EntityManager/: Components.md
Obsidian/src/Renderer/: RenderPipeline.md  Renderable.md
Obsidian/src/Renderer/Instance/: Instance.md
imgui.dir/RelWithDebInfo/imgui.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
imgui.dir/Release/: imgui.lib.recipe
imgui.dir/Release/imgui.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
src/: application.cpp  application.h  common_includes.h  osten_engine.cpp  platform.h  unix_app.cpp  win32_app.cpp
src/additional_things/: arena.h
src/debugger/: debugger.cpp  debugger.h
src/editor/UI/: editor_gui.cpp  imgui.cpp
src/editor/file_explorer/: file_explorer.cpp  file_explorer.h
src/engine/: transform.cpp  transform.h
src/engine/entity_manager/: components.cpp  components.h  entity_manager.cpp  entity_manager.h  entity_system.cpp  entity_system.h
src/engine/message_system/: message.cpp  message.h
src/renderer/: render_data.cpp  render_pipeline.cpp  render_pipeline.h  renderable.h  renderer.cpp  validation.h
src/renderer/camera/: camera.cpp  camera.h
src/renderer/descriptors/: descriptors.cpp  descriptors.h
src/renderer/device/vulkan/: device.cpp  device.h
src/renderer/instance/vulkan/: instance.cpp  instance.h
src/renderer/model_loader/: model_loader.cpp  model_loader.h  obj_parser.h
src/renderer/render_data/vulkan/: render_data.cpp  render_data.h
src/renderer/render_passes/: render_passes.h
src/renderer/shaders/: command.txt  frag.spv  fragment_shader.frag  fragment_shader.frag.spv  quad.frag  quad.frag.spv  quad.vert  quad.vert.spv  shaders.h  vert.spv  vertex_shader.vert
src/renderer/swap_chain/vulkan/: swap_chain.cpp  swap_chain.h
src/renderer/texture/vulkan/: texture.cpp  texture.h
x64/RelWithDebInfo/ALL_BUILD/: ALL_BUILD.recipe
x64/RelWithDebInfo/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.write.1.tlog
x64/RelWithDebInfo/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.write.1.tlog
x64/Release/ALL_BUILD/: ALL_BUILD.recipe
x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.read.1.tlog
x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
